--- a/.github/workflows/package-test-config.yml
+++ b/.github/workflows/package-test-config.yml
@@ -26,4 +26,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run config checks
-        run: ${{ input.command }}
+        run: ${{ inputs.command }}
