--- a/.github/workflows/package-test-integration.yml
+++ b/.github/workflows/package-test-integration.yml
@@ -37,4 +37,4 @@ jobs:
           done
 
       - name: Run integration tests
-        run: ${{ input.command }}
+        run: ${{ inputs.command }}
