--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -65,12 +65,14 @@ jobs:
       
       - name: Create k3d cluster
         run: |
-          # Initialize brew because of https://github.com/actions/runner-images/issues/6283
-          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-          brew install k3d
+          # Install k3d
+          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+          
+          # Create a Kubernetes cluster
           k3d cluster create test-cluster
 
-          # Wait for the generation of a token for the Service Account
+          # Wait for the generation of a token for the Service Account.
+          # It can be removed once support for Kubernetes 1.24 is dropped.
           while [ $(kubectl get configmap kube-root-ca.crt --no-headers | wc -l) -eq 0 ] ; do
             sleep 3
           done
