--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -155,6 +155,7 @@ jobs:
   provenance:
     needs: [build,sign]
     permissions:
+      actions: read
       id-token: write
       packages: write
     uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.4.0
