Add testing on Kubernetes 1.26

--- a/.github/workflows/package-test-integration.yml
+++ b/.github/workflows/package-test-integration.yml
@@ -20,7 +20,8 @@ jobs:
       matrix:
         k3s_image: [
           "rancher/k3s:v1.24.8-k3s1",
-          "rancher/k3s:v1.25.4-k3s1"
+          "rancher/k3s:v1.25.4-k3s1",
+          "rancher/k3s:v1.26.0-k3s1"
         ]
     steps:
       - name: Checkout source code
