--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -147,7 +147,7 @@ jobs:
 
       - name: Sign image
         run: |
-          cosign sign "${IMAGE_NAME}@${IMAGE_DIGEST}"
+          cosign sign --yes "${IMAGE_NAME}@${IMAGE_DIGEST}"
   
   provenance:
     needs: [build,sign]
