--- a/.github/workflows/carvel-package-test-integration.yml
+++ b/.github/workflows/carvel-package-test-integration.yml
@@ -12,7 +12,7 @@ on:
         description: "The Kubernetes version to use for running the package integration tests."
         required: false
         type: string
-        default: v1.28
+        default: v1.30
 
 jobs:
   test-integration:
@@ -22,12 +22,18 @@ jobs:
       contents: read
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v4.1.6
 
       - name: Set up Carvel
         uses: carvel-dev/setup-action@v2.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Set up Task
+        uses: arduino/setup-task@v2.0.0
+      
+      - name: Set up Chainsaw
+        uses: kyverno/action-install-chainsaw@v0.2.1
       
       - name: Set up Homebrew
         id: set-up-homebrew
