--- a/.github/workflows/carvel-package-test-integration.yml
+++ b/.github/workflows/carvel-package-test-integration.yml
@@ -14,30 +14,33 @@ on:
         type: string
         default: v1.30
 
+permissions:
+  contents: read
+
 jobs:
   test-integration:
     name: Integration Tests on ${{ inputs.k8s_version }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v4.1.7
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Set up Carvel
-        uses: carvel-dev/setup-action@v2.0.0
+        uses: carvel-dev/setup-action@47ccf1e203f9789b83ad664384be98880639c3cf # v2.0.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Task
-        uses: arduino/setup-task@v2.0.0
+        uses: arduino/setup-task@b91d5d2c96a56797b48ac1e0e89220bf64044611 # v2.0.0
       
       - name: Set up Chainsaw
-        uses: kyverno/action-install-chainsaw@v0.2.4
+        uses: kyverno/action-install-chainsaw@d1a61148c0437a66760d11d8575332305c2234cb # v0.2.10
       
       - name: Set up Homebrew
         id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
+        uses: Homebrew/actions/setup-homebrew@00f483c95eacf401cf9f4aa3746964071a747334 # master
 
       - name: Install kuttl
         run: |
