--- a/.github/workflows/carvel-package-test-integration.yml
+++ b/.github/workflows/carvel-package-test-integration.yml
@@ -12,7 +12,7 @@ on:
         description: "The Kubernetes version to use for running the package integration tests."
         required: false
         type: string
-        default: v1.33
+        default: v1.34
 
 permissions:
   contents: read
@@ -49,3 +49,5 @@ jobs:
 
       - name: Run integration tests
         run: ${{ inputs.command }}
+        env:
+          K8S_VERSION: ${{ inputs.k8s_version }}
