--- a/.github/workflows/carvel-package-test-integration.yml
+++ b/.github/workflows/carvel-package-test-integration.yml
@@ -48,6 +48,4 @@ jobs:
           brew install kuttl-cli
 
       - name: Run integration tests
-        run: ${{ inputs.command }}
-        env:
-          K8S_VERSION: ${{ inputs.k8s_version }}
+        run: K8S_VERSION=${{ inputs.k8s_version }} ${{ inputs.command }}
