--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -38,6 +38,9 @@ on:
 permissions:
   contents: read
 
+env:
+  FLOX_DISABLE_METRICS: true
+
 jobs:
   build:
     name: Build
@@ -52,63 +55,72 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
 
-      - name: Set up Carvel
-        uses: carvel-dev/setup-action@47ccf1e203f9789b83ad664384be98880639c3cf # v2.0.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install Flox
+        uses: flox/install-flox-action@9428713e8d3883274c334b4b95b8830beebd24d2 # v2.3.0
 
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@00f483c95eacf401cf9f4aa3746964071a747334 # master
+      
+      - name: Install kctrl
+        run: |
+          brew tap carvel-dev/carvel
+          brew install kctrl
+      
       - name: Log into container registry
-        uses: redhat-actions/podman-login@4934294ad0449894bcd1e9f191899d7292469603 # v1.7
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
         with:
-          username: ${{ inputs.registry-username }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ${{ inputs.registry-server }}
+          command: |
+            echo "${{ secrets.GITHUB_TOKEN }}" | podman login "${{ inputs.registry-server }}" \
+              --username "${{ inputs.registry-username }}" \
+              --password-stdin
       
       - name: Create k3d cluster
-        run: |
-          # Install k3d
-          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
-          
-          # Create a Kubernetes cluster
-          k3d cluster create test-cluster
-
-          # Wait for the generation of a token for the Service Account.
-          # It can be removed once support for Kubernetes 1.24 is dropped.
-          while [ $(kubectl get configmap kube-root-ca.crt --no-headers | wc -l) -eq 0 ] ; do
-            sleep 3
-          done
-
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
+        with:
+          command: |
+            k3d cluster create test-cluster
+            kubectl wait --for=condition=Ready nodes --all --timeout=5m
+      
       - name: Package and publish OCI bundle
-        run: |
-          image_tag=$(echo ${{ inputs.version }} | tr + -)
-          kctrl package release -y --version ${{ inputs.version }} \
-            --build-ytt-validations=false \
-            --chdir package \
-            --copy-to ../carvel-artifacts \
-            --repo-output ../repo \
-            --tag ${image_tag}
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
+        with:
+          command: |
+            image_tag=$(echo ${{ inputs.version }} | tr + -)
+            kctrl package release -y --version ${{ inputs.version }} \
+              --build-ytt-validations=false \
+              --chdir package \
+              --copy-to ../carvel-artifacts \
+              --repo-output ../repo \
+              --tag ${image_tag}
       
       - name: Get released OCI image name with digest
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
         id: image-info
-        run: |
-          package_file=$(find carvel-artifacts/packages -name 'package.yml')
-          image_release=$(yq '.spec.template.spec.fetch[0].imgpkgBundle.image' ${package_file})
-          echo "IMAGE_RELEASE=${image_release}" >> $GITHUB_ENV
+        with:
+          command: |
+            package_file=$(find carvel-artifacts/packages -name 'package.yml')
+            image_release=$(yq '.spec.template.spec.fetch[0].imgpkgBundle.image' ${package_file})
+            echo "IMAGE_RELEASE=${image_release}" >> $GITHUB_ENV
 
-          echo "image_name=$(echo ${image_release} | cut -d'@' -f1)" >> $GITHUB_OUTPUT
-          echo "image_digest=$(echo ${image_release} | cut -d'@' -f2)" >> $GITHUB_OUTPUT
-      
+            echo "image_name=$(echo ${image_release} | cut -d'@' -f1)" >> $GITHUB_OUTPUT
+            echo "image_digest=$(echo ${image_release} | cut -d'@' -f2)" >> $GITHUB_OUTPUT
+
       - name: Add additional tags to OCI image
-        run: |
-          podman pull ${IMAGE_RELEASE}
-          podman tag ${IMAGE_RELEASE} ${{ inputs.registry-server }}/${{ inputs.image }}:latest
-          podman push ${{ inputs.registry-server }}/${{ inputs.image }}:latest
-      
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
+        with:
+          command: |
+            podman pull ${IMAGE_RELEASE}
+            podman tag ${IMAGE_RELEASE} ${{ inputs.registry-server }}/${{ inputs.image }}:latest
+            podman push ${{ inputs.registry-server }}/${{ inputs.image }}:latest
+
       - name: Create a release
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create v${{ inputs.version }} \
+        with:
+          command: |
+            gh release create v${{ inputs.version }} \
                 --generate-notes \
                 ./carvel-artifacts/packages/${{ inputs.package-name-slug }}.packages.kadras.io/package.yml \
                 ./carvel-artifacts/packages/${{ inputs.package-name-slug }}.packages.kadras.io/metadata.yml \
@@ -139,19 +151,18 @@ jobs:
       IMAGE_NAME: ${{ needs.build.outputs.image-name }}
       IMAGE_DIGEST: ${{ needs.build.outputs.image-digest }}
     steps:
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@d7543c93d881b35a8faa02e8e3605f69b7a1ce62 # v3.10.0
-
       - name: Log into container registry
-        uses: redhat-actions/podman-login@4934294ad0449894bcd1e9f191899d7292469603 # v1.7
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
         with:
-          username: ${{ inputs.registry-username }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ${{ inputs.registry-server }}
-
-      - name: Sign image
-        run: |
-          cosign sign --yes "${IMAGE_NAME}@${IMAGE_DIGEST}"
+          command: |
+            echo "${{ secrets.GITHUB_TOKEN }}" | podman login "${{ inputs.registry-server }}" \
+              --username "${{ inputs.registry-username }}" \
+              --password-stdin
+      
+      - name: Sign image using Cosign
+        uses: flox/activate-action@410568008895a0f2e09a34bbd9523f8ef1f2d292 # v1.1.0
+        with:
+          command: cosign sign --yes "${IMAGE_NAME}@${IMAGE_DIGEST}"
   
   provenance:
     needs: [build,sign]
